--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "typescript": "^5.0.0",
     "uuid": "^9.0.0"
   },
